# holynull_ai_assistant

./: .gitignore  0xscope_api.md  Makefile  README.md  agent.py  agent_batch.py  anthropic_agent.ipynb  anthropic_chat_models.py  anthropic_tools.py  api_doc_urls.md  api_handler.py  arxiv_wrapper.py  aws_comperhend_moderation_chain.ipynb  cha.py  chromedriver.ipynb  code_review_prompt.txt  custom_agent_excutor.py  custom_configurable_agent_executor.py  defilama_api.md  defillama_agent.ipynb  defillama_wrapper.py  dune_test.ipynb  dune_tools.py  eddie_tools.py  ethereum_address_analysis_agent.py  etherscan.ipynb  fallback_agent.ipynb  fenz_ai_sec.md  git_patch_generator.py  google_finance.ipynb  graph_chatbot.py  graph_code_analysis.py  graph_programmer.py  graph_search.py  logging_config.yml  main.py  news_analysis_test.ipynb  news_analysis_test_prompt.txt  openai_assistant_api_docs.py  openai_assistant_tools.py  (+43 more)
address_analysis/: 0x3DdfA8eC3052539b6C9549F12cEA2C295cfF5296.md  0x503828976D22510aad0201ac7EC88293211D23Da.md  0x5A25b29d63d940FDCbcCAaCcfDF4ad087cd7AFf8.md  0x7a250d5630B4cF539739dF2C5dAcb4c659F2488D.md  0x8021b2962dB803b73Aa874030B0B42c202E8458F.md  0x8d12A197cB00D4747a1fe03395095ce2A5CC6819.md  0xA0c68C638235ee32657e8f720a23ceC1bFc77C77.md  0xd8dA6BF26964aF9D7eEd9e03E53415D37aA96045.md
assistant-graphs/: Makefile  graph.ipynb  langgraph.json  pyproject.toml
assistant-graphs/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
assistant-graphs/src/: agent_config.py  git_patch_generator.py  graph.ipynb  graph_chatbot.py  graph_code_analysis.py  graph_image.py  graph_network.py  graph_programmer.py  graph_search copy.py  graph_search.py  loggers.py  openai_assistant_tools.py  prompt_chatbot.py  prompt_code_analysis.py  prompt_grogrammer.py  prompt_image.py  prompt_search.py  tools_agent_router.py  tools_code_analysis.py  tools_image.py  tools_programmer.py  tools_search.py  webapp.py
chat-langchain/: .env.development  .env.production  next.config.js  package-lock.json  package.json
chat-langchain/app/: globals.css  layout.tsx
chat-langchain/app/components/: ChatMessageBubble.tsx  ChatWindow copy.tsx  ChatWindow.tsx  FileUploadArea.tsx  GlobalPasteHint.tsx  SourceBubble.tsx
chat-langchain/app/types/: file.ts
dune/: 3924884_eddie_get_erc20_transfer_of_address.sql  dex_voluem.sql
frontend/: .env.development  .env.production  next.config.js  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  types.ts
frontend/app/components/: AllowanceERC20.tsx  AnswerHeaderToolUI.tsx  AvailableTokens.tsx  ChatLangChain.tsx  GenerateApproveERC20.tsx  GenerateImage.tsx  GetBalanceOfAddress.tsx  GetERC20Decimals.tsx  GetSOLBalanceOfAddress.tsx  GetSPLBalanceOfAddress.tsx  LangSmithLinkToolUI.tsx  ProgressToolUI.tsx  SelectModel.tsx  SendEVMTransation.tsx  SendSolanaTransation.tsx  SourceList.tsx  SuggestedQuestions.tsx  SwapQuote.tsx  TransactionDetail.tsx  TransactionRecords.tsx  WalletIndicator.tsx
frontend/app/components/chat-interface/: chat-composer.tsx  index.tsx  messages.tsx
frontend/app/components/thread-history/: utils.ts
frontend/app/components/ui/: dialog.tsx  sheet.tsx
frontend/app/components/ui/assistant-ui/: attachment.tsx  tool-fallback.tsx  tooltip-icon-button.tsx
frontend/app/contexts/: GraphContext.tsx  appkit.tsx  utils.ts
frontend/app/hooks/: useRuns.tsx  useThreads.tsx  useUser.tsx
frontend/app/utils/: convert_messages.ts
gpt_advises/: 0_a.md  0_q.md  inprove_address_analysis_a_0.md  inprove_address_analysis_q_0.md
my_langchain_anthropic/: chat_models.py  experimental.py
prompt/: default1.md  default10.md  default10.py  default2.md  default3.md  default4.md  default5.md  default7.md  default8.md  default9.md  fenz.md
rebyte/: rebyte_response.py
rebyte_langchain/: rebyte_langchain.py
