[project]
name = "graphs"
version = "0.0.1"
description = "Starter template for making a new agent LangGraph."
authors = [
    { name = "William Fu-Hinthorn", email = "13333726+hinthornw@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph>=0.2.6",
    "python-dotenv>=1.0.1",
    "langchain-anthropic (==0.3.0)",
    "anthropic (==0.40.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "pytz (>=2025.2,<2026.0)",
    "langchain-community (>=0.3.21,<0.4.0)",
    "langchain-text-splitters (>=0.3.8,<0.4.0)",
    "selenium (>=4.31.0,<5.0.0)",
    "pathspec (>=0.12.1,<0.13.0)",
    "gitpython (>=3.1.44,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "tradingview-ta (>=3.3.0,<4.0.0)",
    "boto3 (>=1.38.3,<2.0.0)",
    "vertexai (>=1.71.1,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
]

[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [""]
[tool.setuptools.package-dir]
"" = "src"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"
